Initial kotlin version